--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Xcode
+#*Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
@@ -8,9 +8,9 @@ DerivedData/
 
 ## Various settings
 *.pbxuser
-!default.pbxuser
+*default.pbxuser
 *.mode1v3
-!default.mode1v3
+*default.mode1v3
 *.mode2v3
 !default.mode2v3
 *.perspectivev3
@@ -74,3 +74,4 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+ 
